Update: filter styles and animations

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,9 +3,11 @@
   "typescript.preferences.quoteStyle": "single",
   "javascript.preferences.quoteStyle": "single",
   "cSpell.words": [
+    "filterctx",
     "Markmap",
     "markmaps",
     "Swal",
-    "sweetalert"
+    "sweetalert",
+    "tabctx"
   ]
 }
