Add: logic for create markmap (client side) and autoreload client side mkm

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
   "typescript.preferences.quoteStyle": "single",
   "javascript.preferences.quoteStyle": "single",
   "cSpell.words": [
+    "cmkm",
     "filterctx",
     "Markmap",
     "markmaps",
