Update: add dmkm to cSpell words

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
   "javascript.preferences.quoteStyle": "single",
   "cSpell.words": [
     "cmkm",
+    "dmkm",
     "filterctx",
     "Markmap",
     "markmaps",
