--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@codemirror/lang-markdown": "^6.3.2",
+    "@codemirror/language-data": "^6.5.1",
+    "@uiw/codemirror-theme-material": "^4.23.9",
+    "@uiw/codemirror-theme-tokyo-night-day": "^4.23.9",
+    "@uiw/codemirror-theme-tokyo-night-storm": "^4.23.9",
+    "@uiw/react-codemirror": "^4.23.9",
+    "d3": "^7.9.0",
+    "just-debounce-it": "^3.2.0",
+    "markmap-common": "^0.18.9",
+    "markmap-lib": "^0.18.11",
+    "markmap-toolbar": "^0.18.10",
+    "markmap-view": "^0.18.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
