--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@uiw/codemirror-theme-tokyo-night-storm": "^4.23.9",
     "@uiw/react-codemirror": "^4.23.9",
     "d3": "^7.9.0",
+    "highlight.js": "^11.11.1",
     "just-debounce-it": "^3.2.0",
     "markmap-common": "^0.18.9",
     "markmap-lib": "^0.18.11",
